--- a/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "1NVtKJb8VK8jXzrGzXrD0A",
+    "id" : "1njACzSxOj4kcajAKN05wJ",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01004J17000000000LB4"
+        "repoHandle" : "01004J17000000000LBG"
       },
       "contextAttributes" : [ {
         "name" : "id",
