--- a/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "9jgVg77nCONebz2wwaEC4c",
+    "id" : "6yxh64coDyyeafJabkjj8H",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01004J17000000000LB2"
+        "repoHandle" : "01004J17000000000LBE"
       },
       "contextAttributes" : [ {
         "name" : "id",
