Automation summary for Force Undo Checkout testsZjFkZWU0YWQtZjlhOC00Nm
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "jae0r66sHERhdRbICg2t2d",
+    "id" : "8L2pItgDIWDlV3Ox8UmLOQ",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
