Automation summary for Force Undo Checkout testsZDhlY2YzMzMtMmFlMC00Y2
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "8L2pItgDIWDlV3Ox8UmLOQ",
+    "id" : "g7VpqKydnwBkiXzn0x5JK6",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
