This is automation checkin summary
This is automation checkin desc

--- a/Explore/VCS_ForceUndoCheckOut/.ForceUndoCheckOut_mapping1.DTEMPLATE.json
+++ b/Explore/VCS_ForceUndoCheckOut/.ForceUndoCheckOut_mapping1.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "c0CpcdMRkGObCeHRnQecIA",
+    "id" : "5M0CQilHArdhjLxwdz7c6P",
     "name" : "ForceUndoCheckOut_mapping1",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000OGK"
+        "repoHandle" : "01001O17000000000OHI"
       },
       "contextAttributes" : [ {
         "name" : "id",
