--- a/Explore/VCS_ForceUndoCheckOut/.VCS_ForceUndoCheckOut.Project.json
+++ b/Explore/VCS_ForceUndoCheckOut/.VCS_ForceUndoCheckOut.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "aAF5pbWTbE8cFrRBNfl40W",
+    "id" : "blEELvMXNyTbnaa2USOIKR",
     "name" : "VCS_ForceUndoCheckOut",
     "type" : "Project",
     "metadata" : {
