Automation summary for Force Undo Checkout testsMTUwYTZmYTQtZjZmNi00N2
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "g7VpqKydnwBkiXzn0x5JK6",
+    "id" : "cQ7eTa697iBcBAvfOSZECX",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
